@@ -33,6 +33,7 @@
           <p>Topics in this directory:<p>
           <a href="contents.html">contents</a><br>
           <a href="welcome.html">welcome</a><br>
+	  <a href="modes.html">modes</a><br>
 	<p>
 	/Karin & Olof
 	<p>
